feat: message component

--- a/src/assets/global-style.css
+++ b/src/assets/global-style.css
@@ -7,18 +7,23 @@
 
     /* 主要颜色 */
     --primary-color: #1890ff;
+    --primary-shallow-color: #40a9ff;
 
     /* 成功颜色 */
     --success-color: #67c23a;
+    --success-shallow-color: #85ce61;
 
     /* 信息颜色 */
     --info-color: #909399;
+    --info-shallow-color: #a6a9ad;
 
     /* 警告颜色 */
     --warning-color: #e6a23c;
+    --warning-shallow-color: #ebb563;
 
     /* 错误颜色 */
     --error-color: #f56c6c;
+    --error-shallow-color: #f78989;
 }
 
 .fade-enter-active,
