--- a/src/components/button/style.less
+++ b/src/components/button/style.less
@@ -72,18 +72,18 @@
   };
 
   &.primary {
-    .theme(var(--primary-color), #40a9ff);
+    .theme(var(--primary-color), var(--primary-shallow-color));
   }
 
   &.success {
-    .theme(var(--success-color), #85ce61);
+    .theme(var(--success-color), var(--success-shallow-color));
   }
 
   &.error {
-    .theme(var(--error-color), #f78989);
+    .theme(var(--error-color), var(--error-shallow-color));
   }
 
   &.warning {
-    .theme(var(--warning-color), #ebb563);
+    .theme(var(--warning-color), var(--warning-shallow-color));
   }
 }
