--- a/src/assets/global-style.css
+++ b/src/assets/global-style.css
@@ -2,6 +2,9 @@
     /* 主文本颜色 */
     --color: #606266;
 
+    /* 次文本色 */
+    --color-minor: #606266;
+
     /* 边框颜色 */
     --border-color: #d9d9d9;
 
