--- a/src/components/select/style/select.less
+++ b/src/components/select/style/select.less
@@ -56,8 +56,6 @@
 
   .ki-options {
     min-width: 100%;
-    max-height: 300px;
-    overflow-y: hidden;
     margin-top: 15px;
     padding: 6px 0;
     position: absolute;
@@ -84,6 +82,11 @@
       top: -14px;
       left: 21px;
     }
+  }
+
+  .ki-options-content {
+    max-height: 300px;
+    overflow-y: hidden;
 
     &:hover {
       overflow-y: scroll !important;
