--- a/src/components/select/style/option-group.less
+++ b/src/components/select/style/option-group.less
@@ -6,7 +6,7 @@
     display: block;
     margin: 0 10px;
     padding-bottom: 5px;
-    border-bottom: 1px solid var(--border-color);
+    border-bottom: 1px solid #e8e5e5;
   }
 
   .label {
