--- a/src/components/select/style/option.less
+++ b/src/components/select/style/option.less
@@ -6,6 +6,9 @@
   padding-left: 10px;
   cursor: pointer;
   white-space: nowrap;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 
   &:hover {
     background-color: #f5f7fa;
@@ -15,6 +18,12 @@
     color: #fff;
     background-color: var(--primary-shallow-color);
   }
+
+  .arrow {
+    color: var(--primary-color);
+    margin-right: 10px;
+    opacity: 0;
+  }
 }
 
 .ki-option.disabled {
@@ -23,5 +32,15 @@
 
   &:hover {
     background-color: initial;
+  }
+}
+
+.ki-option.multiple.active {
+  color: var(--primary-color);
+  font-weight: bold;
+  background-color: initial;
+
+  .arrow {
+    opacity: 1;
   }
 }
