--- a/src/components/select/style/select.less
+++ b/src/components/select/style/select.less
@@ -1,6 +1,6 @@
 .ki-select {
   //width: 240px;
-  height: 40px;
+  min-height: 40px;
   appearance: none;
   -moz-appearance: none;
   -webkit-appearance: none;
@@ -39,15 +39,22 @@
   }
 
   .content {
-    height: 100%;
+    min-height: 40px;
+  }
+
+  .ki-select-tag {
+    line-height: 40px;
+    font-size: 14px;
+    color: var(--color);
+    padding-left: 10px;
   }
 
   .ki-select-input {
     width: 100%;
-    height: 100%;
+    min-height: 40px;
     font-size: 14px;
     outline: none;
-    background-color: #fff;
+    background-color: initial;
     padding: 0 10px;
     box-sizing: border-box;
     border: none;
@@ -112,7 +119,8 @@
         background: transparent;
       }
 
-      .ki-option-group::after {
+      .ki-option-group::after,
+      ::v-deep .ki-option .arrow {
         margin-right: 0;
       }
     }
