feat: 完善 pagination 组件

--- a/src/components/pagination/style.less
+++ b/src/components/pagination/style.less
@@ -26,6 +26,13 @@
     margin-right: 6px;
   }
 
+  .ki-select {
+    width: 65px;
+    min-height: 30px;
+    height: 30px;
+    margin-right: 6px;
+  }
+
   .elevator {
     color: var(--color-minor);
     font-size: 14px;
