--- a/src/components/select/style/select.less
+++ b/src/components/select/style/select.less
@@ -1,61 +1,32 @@
 .ki-select {
   position: relative;
-}
 
-.ki-select-container {
-  height: 100%;
-  appearance: none;
-  -moz-appearance: none;
-  -webkit-appearance: none;
-  position: relative;
-  outline: none;
-  border-radius: 4px;
-  border: 1px solid var(--border-color);
-  box-sizing: border-box;
-
-  .icon {
-    color: var(--border-color);
-    position: absolute;
-    right: 10px;
-    top: 50%;
-    transform: translateY(-50%);
-    transition: transform .3s;
-  }
-
-  .icon.close {
-    cursor: pointer;
-  }
-
-  &.focus {
-    border-color: var(--primary-shallow-color) !important;
+  .content {
+    height: 100%;
+    position: relative;
 
     .icon {
+      color: var(--border-color);
+      position: absolute;
+      right: 10px;
+      top: 50%;
+      transform: translateY(-50%);
+      transition: transform .3s;
+      z-index: 2021;
+    }
+
+    .icon.close {
+      cursor: pointer;
+      z-index: 2021;
+    }
+
+    &.focus .icon {
       transform: translateY(-50%) rotate(-180deg);
     }
 
     .icon.close {
       transform: translateY(-50%);
     }
-  }
-
-  &:hover {
-    border-color: #c0c4cc;
-  }
-
-  .content {
-    height: 100%;
-  }
-
-  .ki-select-input {
-    width: 100%;
-    height: 100%;
-    font-size: 14px;
-    outline: none;
-    background-color: initial;
-    padding-left: 10px;
-    box-sizing: border-box;
-    border: none;
-    border-radius: 4px;
   }
 
   .ki-options {
@@ -123,20 +94,52 @@
       }
     }
   }
+
+  .ki-option-group:last-child {
+    padding: 0;
+
+    &::after {
+      padding: 0;
+      border: none;
+    }
+  }
+}
+
+.ki-select-container {
+  height: 100%;
+  appearance: none;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  position: relative;
+  outline: none;
+  border-radius: 4px;
+  border: 1px solid var(--border-color);
+  box-sizing: border-box;
+
+  &.focus {
+    border-color: var(--primary-shallow-color) !important;
+  }
+
+  &:hover {
+    border-color: #c0c4cc;
+  }
+
+  .ki-select-input {
+    width: 100%;
+    height: 100%;
+    font-size: 14px;
+    outline: none;
+    background-color: initial;
+    padding-left: 10px;
+    box-sizing: border-box;
+    border: none;
+    border-radius: 4px;
+  }
 }
 
 .ki-select-container.disabled .ki-select-input {
   background-color: var(--disabled-background-color);
   cursor: not-allowed;
-}
-
-.ki-select-container .ki-option-group:last-child {
-  padding: 0;
-
-  &::after {
-    padding: 0;
-    border: none;
-  }
 }
 
 .ki-select-tag {
@@ -148,7 +151,7 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  z-index: 2030;
+  z-index: 2021;
 
   input {
     width: 20px;
