--- a/src/components/select/style/select.less
+++ b/src/components/select/style/select.less
@@ -143,7 +143,7 @@
 
 .ki-select-tag {
   font-size: 14px;
-  padding: 0 12px 0 10px;
+  padding: 0 20px 0 10px;
   box-sizing: border-box;
   position: absolute;
   min-height: 40px;
@@ -161,5 +161,13 @@
 
   span {
     line-height: 2;
+  }
+
+  .ki-tag {
+    margin: 3px 3px 0 0;
+  }
+
+  .ki-tag:last-of-type {
+    margin-right: 0;
   }
 }
