--- a/src/components/input/style.less
+++ b/src/components/input/style.less
@@ -49,7 +49,13 @@
 
 .ki-input {
   height: 100%;
-  position: relative;
+  display: flex;
+
+  .ki-input-content {
+    width: 100%;
+    height: 100%;
+    position: relative;
+  }
 
   &:hover .right-icons .close {
     display: block;
@@ -57,6 +63,11 @@
 
   input.paddingLeft {
     padding-left: 30px;
+  }
+
+  input.input-prepend {
+    border-bottom-right-radius: 0;
+    border-top-right-radius: 0;
   }
 
   .icon-position {
@@ -88,6 +99,35 @@
     .close {
       display: none;
     }
+  }
+
+  .append, .prepend {
+    color: var(--color);
+    font-size: 14px;
+    flex: 1;
+    height: 100%;
+    padding: 13px 10px;
+    background-color: #f5f7fa;
+    border: 1px solid var(--border-color);
+    box-sizing: border-box;
+    white-space: nowrap;
+  }
+
+  .append {
+    border-right: none;
+    border-bottom-left-radius: 4px;
+    border-top-left-radius: 4px;
+
+    & + .ki-input-content input {
+      border-bottom-left-radius: 0;
+      border-top-left-radius: 0;
+    }
+  }
+
+  .prepend {
+    border-left: none;
+    border-bottom-right-radius: 4px;
+    border-top-right-radius: 4px;
   }
 }
 
