feat: form validate

--- a/src/components/input/style.less
+++ b/src/components/input/style.less
@@ -30,6 +30,10 @@
     &:hover {
       border-color: #c0c4cc;
     }
+
+    &.error {
+      border-color: var(--error-color) !important;
+    }
   }
 
   input, textarea {
