--- a/src/components/form/style/item.less
+++ b/src/components/form/style/item.less
@@ -1,9 +1,19 @@
 .ki-form-item {
   display: flex;
   align-items: center;
+  margin-bottom: 22px;
 
   .label {
+    color: var(--color);
+    font-size: 14px;
     margin-right: 5px;
+
+    &.required:before {
+      content: '*';
+      color: var(--error-color);
+      font-size: 14px;
+      margin-right: 5px;
+    }
   }
 
   .ki-form-item-inner {
@@ -11,7 +21,7 @@
   }
 
   .error-prompt {
-    color: #ec0404;
+    color: var(--error-color);
     font-size: 12px;
     padding: 3px 0 0 5px;
     position: absolute;
