--- a/src/components/select/style/select.less
+++ b/src/components/select/style/select.less
@@ -63,7 +63,7 @@
     max-height: 300px;
     overflow-y: hidden;
 
-    &:hover {
+    &.max-height:hover {
       overflow-y: auto !important;
 
       /* 设置滚动条的样式 */
@@ -89,7 +89,7 @@
 
       .ki-option-group::after,
       ::v-deep .ki-option .arrow {
-        margin-right: 0;
+        margin-right: 0 !important;
       }
     }
   }
@@ -133,6 +133,14 @@
     box-sizing: border-box;
     border: none;
     border-radius: 4px;
+  }
+
+  &.error {
+    border-color: var(--error-color);
+
+    &.focus {
+      border-color: var(--error-color) !important;
+    }
   }
 }
 
