style: 优化 caroursel 样式

--- a/src/components/carousel/style/carousel.less
+++ b/src/components/carousel/style/carousel.less
@@ -91,12 +91,18 @@
 
       li {
         width: 2px;
-        height: 5%;
+        height: 7%;
+        padding: 0 8px;
+        margin: 0 0 8px 0;
 
         &:before {
           display: block;
           height: 100%;
         }
+      }
+
+      li:last-child {
+        margin: 0;
       }
     }
   }
