--- a/src/components/upload/style.less
+++ b/src/components/upload/style.less
@@ -2,4 +2,28 @@
   .ki-input-file {
     display: none;
   }
+
+  .ki-upload-tip {
+    color: var(--color);
+    font-size: 12px;
+    margin-top: 7px;
+  }
+
+  .ki-upload-list {
+    list-style: none;
+    margin: 7px 0 0 0;
+    padding: 0;
+
+    .ki-upload-list-item {
+      color: var(--color);
+      font-size: 14px;
+      padding: 2px 5px;
+      border-radius: 3px;
+
+      &:hover {
+        color: var(--primary-color);
+        background-color: #eeeded;
+      }
+    }
+  }
 }
