--- a/src/components/modal/style.less
+++ b/src/components/modal/style.less
@@ -4,6 +4,7 @@
   right: 0;
   top: 0;
   bottom: 0;
+  transition: all 1s;
 
   &.mask {
     background-color: rgba(0, 0, 0, .3);
@@ -23,12 +24,12 @@
       padding: 20px 20px 0 20px;
 
       .ki-h-title {
-        font-size: 20px;
+        font-size: 18px;
         color: var(--color);
       }
 
       .ki-h-close {
-        font-size: 20px;
+        font-size: 22px;
         color: var(--primary-color);
         cursor: pointer;
         padding-left: 5px;
@@ -43,6 +44,8 @@
     .ki-modal-footer {
       color: var(--color);
       padding: 0 20px 20px 20px;
+      display: flex;
+      justify-content: flex-end;
     }
   }
 }
