--- a/src/components/message/style.less
+++ b/src/components/message/style.less
@@ -6,8 +6,8 @@
   z-index: 99;
 
   .ki-message-item {
-    width: 320px;
-    height: 32px;
+    min-width: 320px;
+    min-height: 32px;
     font-size: 14px;
     line-height: 32px;
     padding: 6px 10px;
