--- a/src/components/upload/style.less
+++ b/src/components/upload/style.less
@@ -28,6 +28,21 @@
       overflow: hidden;
 
       .progress {
+        position: absolute;
+        left: 0;
+        top: 0;
+        right: 0;
+        bottom: 0;
+
+        span {
+          font-size: 12px;
+          position: absolute;
+          right: 3px;
+          top: 5px;
+        }
+      }
+
+      .progress-bar {
         content: '';
         height: 2px;
         position: absolute;
@@ -93,8 +108,25 @@
         background-color: initial;
       }
 
-      .progress {
+      .progress-picture {
+        position: absolute;
+        width: 100%;
+
+        span {
+          font-size: 12px;
+          position: absolute;
+          right: 0;
+          bottom: -25px;
+        }
+      }
+
+      .progress-bar {
         bottom: -10px;
+
+        span {
+          right: 0;
+          top: 3px;
+        }
       }
 
       .picture-icons {
@@ -114,6 +146,55 @@
           bottom: 2px;
           transform: rotate(-45deg);
         }
+      }
+    }
+  }
+
+  .ki-drag-upload {
+    height: 180px;
+    border-radius: 5px;
+    border: 1px dashed var(--border-color);
+    text-align: center;
+    box-sizing: border-box;
+    position: relative;
+
+    &:hover {
+      border-color: var(--primary-shallow-color);
+    }
+
+    &.disabled:hover {
+      border-color: var(--border-color);
+    }
+
+    &.dragover {
+      border-width: 2px;
+      border-color: var(--primary-shallow-color);
+      background-color: rgba(46, 169, 255, .1);
+    }
+
+    .position {
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+
+    ::v-deep .upload-icon {
+      color: #ccc;
+      font-size: 60px;
+      .position();
+      top: 20px;
+    }
+
+    ::v-deep .upload-text {
+      color: var(--color);
+      font-size: 14px;
+      width: 100%;
+      .position();
+      top: 53%;
+
+      span {
+        color: var(--primary-shallow-color);
+        cursor: pointer;
       }
     }
   }
