--- a/src/components/upload/style.less
+++ b/src/components/upload/style.less
@@ -13,7 +13,7 @@
     margin-top: 7px;
   }
 
-  .ki-upload-list {
+  :deep .ki-upload-list {
     list-style: none;
     margin: 7px 0 0 0;
     padding: 0;
@@ -178,14 +178,14 @@
       transform: translateX(-50%);
     }
 
-    ::v-deep .upload-icon {
+    :deep .upload-icon {
       color: #ccc;
       font-size: 60px;
       .position();
       top: 20px;
     }
 
-    ::v-deep .upload-text {
+    :deep .upload-text {
       color: var(--color);
       font-size: 14px;
       width: 100%;
