--- a/src/components/button/style.less
+++ b/src/components/button/style.less
@@ -15,6 +15,7 @@
 
   .fa {
     font-size: 16px;
+    margin-right: 8px;
   }
 
 
@@ -57,6 +58,10 @@
   &.circular {
     border-radius: 50%;
     padding: 0 !important;
+
+    .fa {
+      margin-right: 0;
+    }
   }
 
   .theme(@color, @active-color) {
@@ -85,5 +90,9 @@
 
   &.warning {
     .theme(var(--warning-color), var(--warning-shallow-color));
+  }
+
+  .ki-btn-text {
+    font-size: 14px;
   }
 }
