--- a/src/components/select/style/select.less
+++ b/src/components/select/style/select.less
@@ -133,6 +133,10 @@
     box-sizing: border-box;
     border: none;
     border-radius: 4px;
+
+    &::placeholder {
+      color: var(--placeholder-color);
+    }
   }
 
   &.error {
