feat: upload 组件文档

--- a/src/components/upload/style.less
+++ b/src/components/upload/style.less
@@ -57,6 +57,10 @@
         float: right;
         margin-top: 1.5px;
         color: var(--success-color);
+
+        .check-icon {
+          color: var(--success-color);
+        }
       }
 
       .check-icon {
