--- a/src/components/input/style.less
+++ b/src/components/input/style.less
@@ -123,6 +123,10 @@
   .left-icon {
     .icon-position();
     left: 10px;
+
+    :deep .fa {
+      color: var(--border-color);
+    }
   }
 
   .right-icons {
@@ -130,6 +134,7 @@
     right: 5px;
 
     .fa {
+      color: var(--border-color);
       cursor: pointer;
       display: inline-block;
       padding: 5px 5px 5px 0;
