--- a/src/components/tag/style.less
+++ b/src/components/tag/style.less
@@ -9,6 +9,7 @@
     display: inline-block;
     width: 15px;
     height: 15px;
+    line-height: 14px;
     text-align: center;
     margin-left: 5px;
   }
