style: select 样式调成

--- a/src/components/select/style/option-group.less
+++ b/src/components/select/style/option-group.less
@@ -15,4 +15,12 @@
     padding-left: 10px;
     margin: 10px 0;
   }
+
+  &:last-child {
+    padding-bottom: 0;
+
+    &::after {
+      display: none;
+    }
+  }
 }
