--- a/src/components/tree/style.less
+++ b/src/components/tree/style.less
@@ -1,3 +1,9 @@
+.ki-tree-nodes {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
 .ki-tree-node {
   color: var(--color);
   font-size: 14px;
@@ -5,20 +11,39 @@
   .ki-node-container {
     display: flex;
     align-items: center;
-    padding-left: 10px;
     box-sizing: border-box;
     cursor: pointer;
 
     .ki-node-expansion {
+      width: 17px;
+      height: 26px;
+      line-height: 26px;
+      margin-right: -6px;
+
+      .ki-node-expansion-icon {
+        padding: 0 6px;
+        box-sizing: border-box;
+        height: 100%;
+      }
+
       .fa {
         color: #c0c4cc;
+      }
+    }
+
+    .ki-node-checked {
+      margin-left: 8px;
+
+      input {
+        display: block;
+        border-color: red;
       }
     }
 
     .ki-node-content {
       height: 26px;
       line-height: 26px;
-      margin-left: 10px;
+      margin-left: 8px;
     }
 
     &:hover {
