--- a/src/components/tree/style.less
+++ b/src/components/tree/style.less
@@ -13,6 +13,7 @@
     align-items: center;
     box-sizing: border-box;
     cursor: pointer;
+    position: relative;
 
     .ki-node-expansion {
       width: 17px;
@@ -49,6 +50,11 @@
       line-height: 26px;
       margin-left: 8px;
       user-select: none;
+    }
+
+    .ki-tree-slots {
+      position: absolute;
+      right: 6px;
     }
 
     &:hover {
