feat: 完善 Checkbox 组件，增加 CheckboxGroup 组件

--- a/src/components/tree/style.less
+++ b/src/components/tree/style.less
@@ -43,6 +43,12 @@
       :deep .ki-checkbox-inner {
         margin-right: 0;
       }
+
+      :deep {
+        .ki-checkbox-wrap {
+          margin-right: 0;
+        }
+      }
     }
 
     .ki-node-content {
