style: 修改 checkbox 禁用状态时的样式

--- a/src/components/checkbox/style.less
+++ b/src/components/checkbox/style.less
@@ -89,12 +89,16 @@
 
     .ki-checkbox-input,
     .ki-checkbox-input:hover {
-      border-color: var(--disabled-color) !important;
+      border-color: var(--border-color) !important;
+    }
+
+    .ki-checkbox-input::after {
+      border-color: #b1b2b3 !important;
     }
 
     .ki-checkbox-input,
     .ki-checkbox-input.active {
-      background-color: var(--disabled-color) !important;
+      background-color: #eceff1 !important;
     }
   }
 }
