feat: message-box 组件增加 type = prompt

--- a/src/components/message-box/style.less
+++ b/src/components/message-box/style.less
@@ -25,19 +25,27 @@
     padding: 12px 15px;
     box-sizing: border-box;
     border-radius: 4px;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid var(--border-color);
+    box-shadow: 0 3px 5px rgba(0, 0, 0, .2);
+
+    &.center {
+      align-items: center;
+    }
   }
 
   .ki-message-box-header {
     color: var(--color);
     font-size: 18px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    cursor: pointer;
 
     .close {
+      position: absolute;
+      right: 15px;
+      top: 8px;
       color: var(--color-minor);
       font-size: 23px;
+      cursor: pointer;
 
       &:hover {
         color: var(--primary-shallow-color);
@@ -50,6 +58,7 @@
     font-size: 14px;
     margin: 20px 0;
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
 
     .ki-message-box-icon {
@@ -81,5 +90,22 @@
   .ki-message-box-operation {
     display: flex;
     justify-content: flex-end;
+  }
+
+  .ki-message-box-prompt {
+    width: 100%;
+    margin-top: 10px;
+
+    p {
+      color: var(--error-color);
+      font-size: 12px;
+    }
+
+    .borderColor input,
+    .borderColor input:focus,
+    .borderColor textarea,
+    .borderColor textarea:focus {
+      border-color: var(--error-color) !important;
+    }
   }
 }
