--- a/src/components/message-box/style.less
+++ b/src/components/message-box/style.less
@@ -1,12 +1,10 @@
 .ki-message-box {
-  position: fixed;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-
-  &.isHidden {
-    display: none;
+  .ki-message-box-inner {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
   }
 
   .mask {
@@ -16,7 +14,7 @@
   }
 
   .ki-message-box-wrapper {
-    position: absolute;
+    position: fixed;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
@@ -107,5 +105,22 @@
     .borderColor textarea:focus {
       border-color: var(--error-color) !important;
     }
+  }
+}
+
+.fall-enter-active {
+  animation: fall-in 0.3s;
+}
+.fall-leave-active {
+  animation: fall-in 0.3s reverse;
+}
+@keyframes fall-in {
+  0% {
+    transform: translate(-50%, -100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translate(-50%, -50%);
+    opacity: 1;
   }
 }
