--- a/src/components/message-box/style.less
+++ b/src/components/message-box/style.less
@@ -106,6 +106,20 @@
       border-color: var(--error-color) !important;
     }
   }
+
+  .ki-message-box-spinner {
+    animation: rotate 1s linear infinite;
+  }
+
+  @keyframes rotate {
+    from {
+      transform: rotate(0deg);
+    }
+
+    to {
+      transform: rotate(360deg);
+    }
+  }
 }
 
 .fall-enter-active {
