--- a/examples/style/global.less
+++ b/examples/style/global.less
@@ -1,3 +1,7 @@
+body, html {
+  font-family: Helvetica Neue,Helvetica,PingFang SC,Hiragino Sans GB,Microsoft YaHei,SimSun,sans-serif;
+}
+
 .ki-btn {
   margin-right: 20px;
 }
@@ -28,5 +32,28 @@ a {
 
   &:hover {
     text-decoration: underline;
+  }
+}
+
+table {
+  width: 100%;
+
+  .common {
+    font-size: 14px;
+    text-align: left;
+    padding: 15px;
+    box-sizing: border-box;
+    border-bottom: 1px solid rgb(220, 223, 230);
+  }
+
+  th {
+    color: rgb(144, 147, 153);
+    font-weight: 400;
+    .common();
+  }
+
+  td {
+    color: rgb(96, 98, 102);
+    .common();
   }
 }
