feat: checkbox、input、文档

--- a/examples/style/global.less
+++ b/examples/style/global.less
@@ -57,3 +57,16 @@ table {
     .common();
   }
 }
+
+blockquote {
+  border-left: 5px solid #1890ff;
+  margin: 0;
+  padding: 20px;
+  box-sizing: border-box;
+  margin-top: 20px;
+  background-color: #e1effa;
+
+  p {
+    margin: 0;
+  }
+}
