--- a/examples/style/global.less
+++ b/examples/style/global.less
@@ -29,6 +29,7 @@ p {
 a {
   color: #1890ff;
   text-decoration: none;
+  cursor: pointer;
 
   &:hover {
     text-decoration: underline;
@@ -68,5 +69,20 @@ blockquote {
 
   p {
     margin: 0;
+  }
+}
+
+ul {
+  margin: 10px 0;
+  padding: 0 0 0 20px;
+  font-size: 14px;
+  color: #5e6d82;
+  line-height: 2em;
+
+  code {
+    background-color: #f9fafc;
+    padding: 0 4px;
+    border: 1px solid #eaeefb;
+    border-radius: 4px;
   }
 }
