style: 文档样式优化

--- a/examples/style/global.less
+++ b/examples/style/global.less
@@ -1,3 +1,5 @@
+@import 'highlight.js/styles/atom-one-light.css';
+
 body, html {
   font-family: Helvetica Neue,Helvetica,PingFang SC,Hiragino Sans GB,Microsoft YaHei,SimSun,sans-serif;
 }
@@ -85,4 +87,18 @@ ul {
     border: 1px solid #eaeefb;
     border-radius: 4px;
   }
+}
+
+code {
+  color: #1f2f3d;
+  font-size: 12px;
+  line-height: 1.8;
+  font-family: Menlo, Monaco, Consolas, Courier, monospace, "微软雅黑";
+}
+
+pre {
+  background-color: #fafafa;
+  padding: 20px 10px;
+  border: 1px solid #d9d9d9;
+  border-radius: 4px;
 }
