feat: Switch 组件自定义宽度功能调整: 宽度设置不影响高度

--- a/packages/switch/src/style.less
+++ b/packages/switch/src/style.less
@@ -27,6 +27,7 @@
   }
 
   .ki-switch-core {
+    height: 20px;
     border-radius: 30px;
     background-color: var(--border-color);
     position: relative;
@@ -35,14 +36,14 @@
   }
 
   .ki-switch-control-point {
-    width: 40%;
-    height: 80%;
+    width: 16px;
+    height: 16px;
     position: absolute;
     left: 0;
     top: 50%;
     transform: translateY(-50%);
     transition: all .3s;
-    padding: 0 3%;
+    padding: 0 2px;
 
     &::after {
       content: '';
