--- a/packages/table/src/style.less
+++ b/packages/table/src/style.less
@@ -27,6 +27,16 @@
       background-color: #f5f7fa;
     }
   }
+
+  .is_center {
+    text-align: center;
+  }
+  .is_right {
+    text-align: right;
+  }
+  .is_left {
+    text-align: left;
+  }
 }
 
 .ki-table.border {
