--- a/packages/img-preview/src/style.less
+++ b/packages/img-preview/src/style.less
@@ -1,4 +1,10 @@
 .ki-img-preview {
+  .ki-icon {
+    color: #fff;
+    font-size: 21px;
+    cursor: pointer;
+  }
+
   .ki-preview-container {
     position: fixed;
     left: 0;
@@ -9,13 +15,28 @@
     z-index: 1024;
 
     .ki-preview-close {
-      color: #fff;
       font-size: 25px;
       position: absolute;
       right: 6%;
       top: 6%;
-      cursor: pointer;
       z-index: 1024;
+    }
+
+    .ki-preview-prev,
+    .ki-preview-next {
+      font-size: 40px;
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      z-index: 1024;
+    }
+
+    .ki-preview-prev {
+      left: 10%;
+    }
+
+    .ki-preview-next {
+      right: 10%;
     }
 
     .ki-preview-content {
@@ -44,12 +65,6 @@
       display: flex;
       align-items: center;
       justify-content: space-around;
-
-      .ki-icon {
-        color: #fff;
-        font-size: 21px;
-        cursor: pointer;
-      }
     }
   }
 }
