feat: img-preview 增加组件使用方式

--- a/packages/img-preview/src/style.less
+++ b/packages/img-preview/src/style.less
@@ -5,6 +5,22 @@
     cursor: pointer;
   }
 
+  .ki-img-list {
+    display: flex;
+
+    img {
+      width: 180px;
+      display: block;
+      margin-right: 10px;
+      border-radius: 3px;
+      cursor: pointer;
+    }
+
+    img:last-child {
+      margin-right: 0;
+    }
+  }
+
   .ki-preview-container {
     position: fixed;
     left: 0;
