--- a/packages/img-preview/src/style.less
+++ b/packages/img-preview/src/style.less
@@ -10,15 +10,41 @@
     flex-wrap: wrap;
 
     img {
-      width: 180px;
+      width: 100%;
       display: block;
-      margin-right: 10px;
-      border-radius: 3px;
-      cursor: pointer;
     }
 
-    img:last-child {
+    .ki-img-item:last-child {
       margin-right: 0;
+    }
+
+    .ki-img-item {
+      width: 180px;
+      display: flex;
+      position: relative;
+      margin-right: 10px;
+      cursor: pointer;
+      border-radius: 3px;
+      overflow: hidden;
+
+      .ki-img-mask {
+        content: '';
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        opacity: 0;
+        transition: all .2s;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      .ki-img-mask:hover {
+        opacity: 1;
+        background-color: rgba(0, 0, 0, .5);
+      }
     }
   }
 
