--- a/packages/img-preview/src/style.less
+++ b/packages/img-preview/src/style.less
@@ -1,7 +1,8 @@
 .ki-img-preview {
+
   .ki-icon {
     color: #fff;
-    font-size: 21px;
+    font-size: 18px;
     cursor: pointer;
   }
 
@@ -108,6 +109,7 @@
       display: flex;
       align-items: center;
       justify-content: space-around;
+      padding: 0 10px;
     }
   }
 }
