--- a/packages/img-preview/src/style.less
+++ b/packages/img-preview/src/style.less
@@ -89,12 +89,14 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      cursor: grab;
     }
 
     img {
       max-width: 90%;
       max-height: 100%;
       transition: all .3s;
+      pointer-events: none;
     }
 
     .ki-preview-control {
