--- a/packages/date-picker/src/style.less
+++ b/packages/date-picker/src/style.less
@@ -14,7 +14,7 @@
   .ki-picker-month,
   .ki-picker-week {
     display: grid;
-    grid-template-columns: repeat(7, 38px);
+    grid-template-columns: repeat(7, 32px);
     grid-template-rows: 32px;
     grid-auto-rows: 32px;
   }
@@ -44,6 +44,11 @@
     &.prev,
     &.next {
       color: rgba(194, 194, 194, 1);
+    }
+
+    &.active {
+      color: #fff;
+      background-color: var(--primary-color);
     }
   }
 }
