--- a/packages/date-picker/src/style.less
+++ b/packages/date-picker/src/style.less
@@ -11,6 +11,24 @@
     box-shadow: 0 0 5px 3px rgba(0, 0, 0, 0.1);
   }
 
+  .ki-picker-tools {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 5px;
+
+    .ki-picker-current-date {
+      font-size: 14px;
+      font-weight: 500;
+    }
+
+    .ki-picker-change-month {
+      color: rgba(194, 194, 194, 1);
+      cursor: pointer;
+      padding: 0 5px;
+    }
+  }
+
   .ki-picker-month,
   .ki-picker-week {
     display: grid;
