--- a/packages/date-picker/src/style.less
+++ b/packages/date-picker/src/style.less
@@ -69,4 +69,24 @@
       background-color: var(--primary-color);
     }
   }
+
+  .ki-picker-footer {
+    color: rgb(51, 54, 57);
+    font-size: 12px;
+    margin-top: 10px;
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  .ki-picker-footer-now {
+    cursor: pointer;
+    padding: 2px 6px;
+    border-radius: 4px;
+    border: 1px solid var(--border-color);
+
+    &:hover {
+      color: var(--primary-color);
+      border-color: var(--primary-color);
+    }
+  }
 }
