--- a/packages/date-picker/src/style.less
+++ b/packages/date-picker/src/style.less
@@ -1,92 +1,91 @@
 .ki-date-picker {
   position: relative;
+}
 
-  .ki-picker-panel {
-    padding: 5px;
-    border-radius: 2px;
-    position: absolute;
-    z-index: 1024;
-    margin-top: 5px;
-    background-color: #fff;
-    box-shadow: 0 0 5px 3px rgba(0, 0, 0, 0.1);
-  }
+.ki-picker-panel {
+  padding: 5px;
+  border-radius: 2px;
+  z-index: 1024;
+  background-color: #fff;
+  position: fixed;
+  box-shadow: 0 0 5px 3px rgba(0, 0, 0, 0.1);
+}
 
-  .ki-picker-tools {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 5px;
+.ki-picker-tools {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 5px;
 
-    .ki-picker-current-date {
-      font-size: 14px;
-      font-weight: 500;
-    }
-
-    .ki-picker-change-month {
-      color: rgba(194, 194, 194, 1);
-      cursor: pointer;
-      padding: 0 5px;
-    }
-  }
-
-  .ki-picker-month,
-  .ki-picker-week {
-    display: grid;
-    grid-template-columns: repeat(7, 32px);
-    grid-template-rows: 32px;
-    grid-auto-rows: 32px;
-  }
-
-  .ki-picker-week {
-    margin-bottom: 10px;
-    border-bottom: 1px solid rgb(239, 239, 245);
-  }
-
-  .ki-week-item,
-  .ki-picker-cell {
-    color: rgb(51, 54, 57);
+  .ki-picker-current-date {
     font-size: 14px;
-    line-height: 32px;
-    text-align: center;
-    cursor: default;
+    font-weight: 500;
   }
 
-  .ki-picker-cell {
+  .ki-picker-change-month {
+    color: rgba(194, 194, 194, 1);
     cursor: pointer;
-    border-radius: 4px;
+    padding: 0 5px;
+  }
+}
 
-    &:hover {
-      background-color: rgb(243, 243, 245);
-    }
+.ki-picker-month,
+.ki-picker-week {
+  display: grid;
+  grid-template-columns: repeat(7, 32px);
+  grid-template-rows: 32px;
+  grid-auto-rows: 32px;
+}
 
-    &.prev,
-    &.next {
-      color: rgba(194, 194, 194, 1);
-    }
+.ki-picker-week {
+  margin-bottom: 10px;
+  border-bottom: 1px solid rgb(239, 239, 245);
+}
 
-    &.active {
-      color: #fff;
-      background-color: var(--primary-color);
-    }
+.ki-week-item,
+.ki-picker-cell {
+  color: rgb(51, 54, 57);
+  font-size: 14px;
+  line-height: 32px;
+  text-align: center;
+  cursor: default;
+}
+
+.ki-picker-cell {
+  cursor: pointer;
+  border-radius: 4px;
+
+  &:hover {
+    background-color: rgb(243, 243, 245);
   }
 
-  .ki-picker-footer {
-    color: rgb(51, 54, 57);
-    font-size: 12px;
-    margin-top: 10px;
-    display: flex;
-    justify-content: flex-end;
+  &.prev,
+  &.next {
+    color: rgba(194, 194, 194, 1);
   }
 
-  .ki-picker-footer-now {
-    cursor: pointer;
-    padding: 2px 6px;
-    border-radius: 4px;
-    border: 1px solid var(--border-color);
+  &.active {
+    color: #fff;
+    background-color: var(--primary-color);
+  }
+}
 
-    &:hover {
-      color: var(--primary-color);
-      border-color: var(--primary-color);
-    }
+.ki-picker-footer {
+  color: rgb(51, 54, 57);
+  font-size: 12px;
+  margin-top: 10px;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.ki-picker-footer-now {
+  cursor: pointer;
+  padding: 2px 6px;
+  border-radius: 4px;
+  border: 1px solid var(--border-color);
+
+  &:hover {
+    color: var(--primary-color);
+    border-color: var(--primary-color);
   }
 }
